--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,8 @@
     font-family: "TickingTimebombBB";
     src: url("./fonts/TickingTimebombBB.ttf"),
 }
+
+@font-face {
+    font-family: "TickingTimebombBB";
+    src: url("./fonts/TickingTimebombBB.ttf"),
+}
